# littledb_c

./: CMakeLists.txt  README.md
include/: littledb.h
src/: common_operations.c  common_operations.h  endian.c  sha256.c
test/: CMakeLists.txt  endian_test.c
